--------------------------------------------------------------------------------
drkns 28.05.2021 17:18:19 +0100 - build 5805

1. Correction of 4788.2: edit controls were incorrectly set to unchanged state after DM_SETTEXT.

2. 1 second timeout before triggeting the screensaver with a mouse to avoid flickering.

3. "[x] Clock in viewer and editor" removed. Clock is now displayed either everywhere or nowhere.

--------------------------------------------------------------------------------
drkns 27.05.2021 23:22:21 +0100 - build 5804

1. Experimental: removed constant polling from the main thread.
   This should noticeably reduce CPU consumption and make various idle events more predictable.

2. Experimental: reworked Find File dialog updating.
   This should make the search faster and make UI updates more predictable.

3. Optimisation of message transfer between threads.
   This should reduce the amount of locks and make things faster in various places.

4. More logging.

5. Minor refactoring.

--------------------------------------------------------------------------------
drkns 27.05.2021 17:18:25 +0100 - build 5803

1. Workaround for gh-404: hangs on exit in Windows XP SP3.

--------------------------------------------------------------------------------
drkns 20.05.2021 23:33:22 +0100 - build 5802

1. Two separate minidumps: normal (small) and full memory (huge).
   To make it easier to report issues.

--------------------------------------------------------------------------------
drkns 19.05.2021 18:46:33 +0100 - build 5801

1. Alpha blending performance optimisation.

--------------------------------------------------------------------------------
drkns 19.05.2021 00:00:00 +0100 - build 5800

1. Continuation of 5788: proper alpha blending.
   Available in files highlighting and editor selection colour.

--------------------------------------------------------------------------------
drkns 16.05.2021 15:31:41 +0100 - build 5799

1. Correction of 5776.
